--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %} {% block title %}Home Page{% endblock %}{% block
 content %}
-<h1>Home Page</h1>
+
 {% for msg in get_flashed_messages() %}
 <p>{{ msg }}</p>
+{% endfor %}
 
 {% if current_user.is_authenticated %}
+
 <a href="{{ url_for('logout') }}" class="btn btn-primary">Logout</a>
-{% endif %} {% endfor %} {% endblock %}
+{% else %}
+<div class="container-fluid mb-1">
+  
+ 
+  <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a>
+  <a href="{{ url_for('signup_user') }}" class="btn btn-primary">Sign Up</a>
+
+</div>
+
+{% endif %}
+
+{% endblock %}
+</div>
