--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,33 +3,35 @@ content %}
 
 <main class="flex-shrink-0">
   <div class="container">
-    <div id="list-group" class="list-group w-auto">
-      <div
-        class="bg-primary list-group-item list-group-item-action d-flex gap-3 py-3"
-      >
-        <p class="fs-1">&#127891;</p>
-        <p id="tutor-text" class="mb-0 opacity-75">
-          What do you want to chat about today?
-        </p>
-      </div>
-
-      <div
-        class="bg-secondary list-group-item list-group-item-action d-flex gap-3 py-3"
-      >
-        <p class="fs-1">&#128512;</p>
-        <p id="user-text" class="mb-0 opacity-75">
-          Let's pretend I'm in a bar and want to order some drinks.
-        </p>
-      </div>
-    </div>
+    <div id="list-group" class="list-group w-auto"></div>
 
     <div class="input-group mb-3">
       <input type="text" class="form-control" id="user-input" />
       <div class="input-group-append">
-        <button id="gpt-button" class="btn btn-primary">Submit</button>
+        <button id="submit-button" class="btn btn-primary">Submit</button>
       </div>
     </div>
   </div>
 </main>
 
 {% endblock %}
+
+<!-- <div id="list-group" class="list-group w-auto">
+  <div
+    class="bg-primary list-group-item list-group-item-action d-flex gap-3 py-3"
+  >
+    <p class="fs-1">&#127891;</p>
+    <p id="tutor-text" class="mb-0 opacity-75">
+      What do you want to chat about today?
+    </p>
+  </div>
+
+  <div
+    class="bg-secondary list-group-item list-group-item-action d-flex gap-3 py-3"
+  >
+    <p class="fs-1">&#128512;</p>
+    <p id="user-text" class="mb-0 opacity-75">
+      Let's pretend I'm in a bar and want to order some drinks.
+    </p>
+  </div>
+</div> -->
