--- a/templates/base.html
+++ b/templates/base.html
@@ -16,23 +16,14 @@
   </head>
   <body class="pt-5">
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary"">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary"">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Foreign Language Tutor</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="text-light">Practice Your Foreign Language Conversation Skills</li>
+              <li class="text-light">Practice Foreign Language Conversation Skills</li>
+              {% if current_user.is_authenticated %}
+              <li>Hello, {{ current_user.username }}</li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -41,6 +32,7 @@
     <div class="container mt-5">
       {% block content %}{% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
     <script src="/static/app.js"></script>
   </body>
 </html>
