--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,28 +1,26 @@
 {% extends 'base.html' %} {% block title %}Register{% endblock %} {% block
 content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-7 col-lg-5">
-      <h2 class="text-center join-message">Sign Up</h2>
+<div class="container d-flex justify-content-center">
+  <div class="col-md-7 col-lg-5">
+    <h2 class="text-center join-message">Sign Up</h2>
 
-      <form method="POST" id="register_form">
-        {{ form.hidden_tag() }} {% for field in form if field.widget.input_type
-        != 'hidden' %}
-        <div class="form-group">
-          {% for error in field.errors %}
-          <span class="text-danger">{{ error }}</span>
-          {% endfor %} {{ field.label(class="form-label") }} {{
-          field(class="form-control") }}
-        </div>
-        {% endfor %}
+    <form method="POST" id="register_form">
+      {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
+      'hidden' %}
+      <div class="form-group">
+        {% for error in field.errors %}
+        <span class="text-danger">{{ error }}</span>
+        {% endfor %} {{ field.label(class="form-label") }} {{
+        field(class="form-control") }}
+      </div>
+      {% endfor %}
 
-        <div class="text-center">
-          <button class="btn btn-primary btn-block btn-md mt-4" type="submit">
-            Submit
-          </button>
-        </div>
-      </form>
-    </div>
+      <div class="text-center">
+        <button class="btn btn-primary btn-block btn-md mt-4" type="submit">
+          Submit
+        </button>
+      </div>
+    </form>
   </div>
 </div>
 {% endblock %}
