--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@ content %}
 <div class="container d-flex justify-content-center">
   <div class="col-md-7 col-lg-5">
     {% for msg in get_flashed_messages() %}
-    <p>{{ msg }}</p>
+    <p class="text-success">{{ msg }}</p>
     {% endfor %}
     {% if current_user.is_authenticated %}
   <a href="{{ url_for('logout') }}" class="btn btn-primary">Logout</a>
