--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,9 @@ content %}
 <div class="container d-flex justify-content-center">
   <div class="col-md-7 col-lg-5">
     <h2 class="text-center join-message">Log in to your account</h2>
+    {% for msg in get_flashed_messages() %}
+    <p class="text-danger">{{ msg }}</p>
+    {% endfor %}
 
     <form method="POST" id="login_form">
       {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
