--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,7 +7,16 @@ content %}
       id="message-group"
       data-chat-id="{{ chat_id }}"
       class="list-group w-auto"
-    ></div>
+    >
+      {% if messages %} {% for message in messages %}
+      <div
+        class="bg-secondary list-group-item list-group-item-action d-flex gap-3 py-3 border border-light border-1"
+      >
+        <p class="fs-3">&#128512;</p>
+        <p id="user-text" class="mb-0 opacity-75">{{message.content}}</p>
+      </div>
+      {% endfor %} {% endif %}
+    </div>
 
     <div class="input-group mb-3">
       <input
