--- a/templates/chat_list.html
+++ b/templates/chat_list.html
@@ -4,7 +4,7 @@ content %}
   <div class="col-md-7 col-lg-5">
     <ul>
       {% for chat in chats %}
-      <li>{{ chat.created_at }}</li>
+      <li><a href="">{{ chat.created_at }}</a></li>
       {% endfor %}
     </ul>
   </div>
