--- a/templates/base.html
+++ b/templates/base.html
@@ -17,16 +17,19 @@
   <body class="pt-5">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary"">
-        <div class="container-fluid">
+        <div class="container-fluid d-flex align-items-center">
           <a class="navbar-brand" href="/">Foreign Language Tutor</a>
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="text-light">Practice Foreign Language Conversation Skills</li>
-              {% if current_user.is_authenticated %}
-              <li><a href="{{ url_for('home') }}">{{ current_user.username }} Home</a></li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
+          
+
+          <ul class="navbar-nav mx-auto mb-2 mb-md-0 d-flex">
+            
+            
+            {% if current_user.is_authenticated %}
+            <li><a  href="{{ url_for('home') }}">{{ current_user.username }} Home</a></li>
+            
+            {% endif %}
+          </ul>
+        </div>     
       </nav>
     </header>
     <div class="container mt-5">
