--- a/templates/chat_list.html
+++ b/templates/chat_list.html
@@ -1,17 +1,48 @@
 {% extends 'base.html' %} {% block title %}Register{% endblock %} {% block
 content %}
-<div class="container d-flex justify-content-center">
-  <div class="col-md-7 col-lg-5">
-    <ul>
-      {% for chat in chats %}
-      <li>
-        <a href="{{ url_for('chat_page', chat_id=chat.id) }}"
-          >{{ chat.created_at }}</a
+<div class="container">
+  <h1>Filter Chats</h1>
+  <form
+    method="GET"
+    action="{{ url_for('get_chats', user_id=current_user.id) }}"
+  >
+    {{ chat_title_form.csrf_token }}
+    <div class="form-group">
+      {{ chat_title_form.chat_title.label }} {{
+      chat_title_form.chat_title(class="form-control") }}
+    </div>
+    <button type="submit" class="btn btn-primary">Filter</button>
+  </form>
+
+  <hr />
+
+  <div class="container d-flex justify-content-center">
+    <div class="col-md-9 col-lg-5">
+      <ul class="list-group">
+        {% for chat in chats %}
+        <li
+          class="list-group-item d-flex justify-content-between align-items-center"
         >
-      </li>
-      {% endfor %}
-    </ul>
+          <div>
+            <a
+              class="list-group-item list-group-item-action"
+              href="{{ url_for('chat_page', chat_id=chat.id) }}"
+            >
+              {{ chat.chat_title }}
+            </a>
+          </div>
+          <div>
+            <a
+              class="btn btn-primary mr-2"
+              href="{{ url_for('edit', chat_id=chat.id) }}"
+              >Edit Title</a
+            >
+            <a class="btn btn-danger" href="">Delete</a>
+          </div>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
   </div>
 </div>
-
 {% endblock %}
