--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,37 +1,39 @@
 {% extends 'base.html' %} {% block title %}User Home Page{% endblock %}{% block
 content %}
 <div class="container d-flex justify-content-center">
-  <div class="row">
-    <main>
-      <div class="mt-4">
-        <h2>New Chat</h2>
+  <div class="col-md-7 col-lg-5">
+    <div class="row">
+      <main>
+        <div class="mt-4">
+          <h2>New Chat</h2>
 
-        <form method="POST" action="{{ url_for('home') }}">
-          {{ form.hidden_tag() }}
-          <div class="form-group">
-            {{ form.language.label(class="form-label") }} {{
-            form.language(class="form-control") }}
-          </div>
-          <div class="form-group">
-            {{ form.language_level.label(class="form-label") }} {{
-            form.language_level(class="form-control") }}
-          </div>
-          <div class="form-group">
-            <button class="btn btn-success" type="submit">
-              Start New Chat
-            </button>
-          </div>
-        </form>
+          <form method="POST" action="{{ url_for('home') }}">
+            {{ form.hidden_tag() }}
+            <div class="form-group">
+              {{ form.language.label(class="form-label") }} {{
+              form.language(class="form-control") }}
+            </div>
+            <div class="form-group">
+              {{ form.language_level.label(class="form-label") }} {{
+              form.language_level(class="form-control") }}
+            </div>
+            <div class="form-group">
+              <button class="btn btn-success" type="submit">
+                Start New Chat
+              </button>
+            </div>
+          </form>
+        </div>
+      </main>
+
+      <div class="text-center mt-4">
+        <a
+          href="{{ url_for('get_chats', user_id=current_user.id) }}"
+          class="btn btn-primary"
+          >Saved Chats</a
+        >
+        <a href="{{ url_for('logout') }}" class="btn btn-warning">Logout</a>
       </div>
-    </main>
-
-    <div class="text-center mt-4">
-      <a
-        href="{{ url_for('get_chats', user_id=current_user.id) }}"
-        class="btn btn-primary"
-        >Saved Chats</a
-      >
-      <a href="{{ url_for('logout') }}" class="btn btn-warning">Logout</a>
     </div>
   </div>
 </div>
