--- a/templates/base.html
+++ b/templates/base.html
@@ -5,18 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/85fc6a0402.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/static/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/superhero/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/superhero/bootstrap.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body class="pt-5">
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary"">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary">
+        <div class="container-fluid d-flex align-items-center">
+          <a class="navbar-brand" href="/">Foreign Language Tutor</a>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="{{ url_for('display_chats', user_id=current_user.id) }}"
+                  >Chats</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('home') }}"
+                  ><i class="fa-solid fa-house fa-lg icon"></i
+                ></a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary"">
         <div class="container-fluid d-flex align-items-center">
           <a class="navbar-brand" href="/">Foreign Language Tutor</a>
           
@@ -25,17 +78,20 @@
             
             
             {% if current_user.is_authenticated %}
-            <li><a  href="{{ url_for('home') }}">{{ current_user.username }} Home</a></li>
             
+            <li><a  href="{{ url_for('display_chats', user_id=current_user.id) }}">Chats</i></a></li>
+
+            <li><a  href="{{ url_for('logout') }}">Logout</i></a></li>
+
+            <li><a  href="{{ url_for('home') }}"><i class="fa-solid fa-house fa-lg icon"></i></a></li>
             {% endif %}
           </ul>
         </div>     
-      </nav>
+      </nav> -->
     </header>
-    <div class="container mt-5">
-      {% block content %}{% endblock %}
-    </div>
+    <div class="container mt-5">{% block content %}{% endblock %}</div>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
     <script src="/static/app.js"></script>
+    <script src="/static/formValidation.js"></script>
   </body>
 </html>
