--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,35 +1,53 @@
-{% extends 'base.html' %} {% block title %}New Chat{% endblock %}{% block
+{% extends 'base.html' %} {% block title %}New Chat{% endblock %} {% block
 content %}
 
 <main class="flex-shrink-0">
   <div class="container">
-    <div
+    <ul
       id="message-group"
       data-chat-id="{{ chat_id }}"
       class="list-group w-auto"
+      style="max-height: calc(100vh - 200px); overflow-y: auto"
+    >
+      {% if messages %} {% for message in messages %}
+      <li class="list-group-item my-1">
+        <p class="fs-3">&#128512;</p>
+        <p id="user-text" class="opacity-75">{{ message.content }}</p>
+      </li>
+      {% endfor %} {% endif %}
+    </ul>
+    <!-- <div
+      id="message-group"
+      data-chat-id="{{ chat_id }}"
+      class="list-group w-auto"
+      style="max-height: calc(100vh - 200px); overflow-y: auto"
     >
       {% if messages %} {% for message in messages %}
       <div
         class="bg-secondary list-group-item list-group-item-action d-flex gap-3 py-3 border border-light border-1"
       >
         <p class="fs-3">&#128512;</p>
-        <p id="user-text" class="mb-0 opacity-75">{{message.content}}</p>
+        <p id="user-text" class="mb-0 opacity-75">{{ message.content }}</p>
       </div>
       {% endfor %} {% endif %}
-    </div>
+    </div> -->
+  </div>
 
-    <div class="input-group mb-3">
-      <input
-        id="user-input"
-        type="text"
-        class="form-control"
-        placeholder="start chatting"
-        aria-label="start chatting"
-        aria-describedby="submit-button"
-      />
-      <button class="btn btn-primary" type="button" id="submit-button">
-        Submit
-      </button>
+  <div class="fixed-bottom">
+    <div class="container">
+      <div class="input-group mb-3">
+        <input
+          id="user-input"
+          type="text"
+          class="form-control"
+          placeholder="start chatting"
+          aria-label="start chatting"
+          aria-describedby="submit-button"
+        />
+        <button class="btn btn-primary" type="button" id="submit-button">
+          Submit
+        </button>
+      </div>
     </div>
   </div>
 </main>
