--- a/templates/chat_list.html
+++ b/templates/chat_list.html
@@ -28,9 +28,11 @@ endblock %} {% block content %}
                   <i class="fa-solid fa-pen-to-square"></i>
                 </a>
               
-                <a href="{{ url_for('delete_chat', chat_id=chat.id) }}" class="custom-button">
-                  <i class="fa-solid fa-trash"></i>
-                </a>
+                <form action="{{ url_for('delete_chat', chat_id=chat.id) }}" method="POST">
+                  <button type="submit" class="custom-button">
+                    <i class="fa-solid fa-trash"></i>
+                  </button>
+                </form>
               
             </div>
           </div>
