--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,17 @@
 content %}
 <div class="container d-flex justify-content-center">
   <div class="col-md-7 col-lg-5">
-    {% for msg in get_flashed_messages() %}
-    <p class="text-success bg-dark border border-success border-1">{{ msg }}</p>
-    {% endfor %}
-    {% if current_user.is_authenticated %}
-  <a href="{{ url_for('logout') }}" class="btn btn-primary">Logout</a>
-  {% else %}
-  <div class="container-fluid mb-1">
-    <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a>
-    <a href="{{ url_for('signup_user') }}" class="btn btn-primary">Sign Up</a>
+    <div class="row">
+      {% for msg in get_flashed_messages() %}
+      <p class="text-success bg-dark border border-success border-1">
+        {{ msg }}
+      </p>
+      {% endfor %} {% if current_user.is_authenticated %}
+      <p>Welcome {{ current_user.username }}!</p>
+      <p>Ready to start practicing your conversation skills?</p>
+      <a href="{{ url_for('home') }}" class="btn btn-primary">New Chat</a>
+      {% endif %}
+    </div>
   </div>
-{% endif %}
-  </div>
-
-</div>
 </div>
 {% endblock %}
