--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,52 @@ content %}
       <p class="text-success bg-dark border border-success border-1">
         {{ msg }}
       </p>
-      {% endfor %} {% if current_user.is_authenticated %}
-      <p>Welcome {{ current_user.username }}!</p>
-      <p>Ready to start practicing your conversation skills?</p>
-      <a href="{{ url_for('home') }}" class="btn btn-primary">New Chat</a>
+      {% endfor %}{% if current_user.is_authenticated %}
+      <h2 class="text-center mb-4">Welcome {{ current_user.username }}!</h2>
+
+      <a href="{{ url_for('new_chat') }}" class="btn btn-success mb-3"
+        >Start a New Conversation</a
+      >
+
+      {% if current_user.chats %}
+      <a
+        href="{{ url_for('display_chats', user_id=current_user.id) }}"
+        class="btn btn-primary"
+        >View Existing Conversations</a
+      >
+      {% endif %} {% else %}
+      
+        
+          
+            <h1 class="">ChatMentor</h1>
+            <p class="lead mb-3">Master Conversations, Elevate Your Language Skills</p>
+            <h4>Immerse Yourself in Lifelike Conversations</h4>
+              <p class="text-body-secondary">
+                Practice your
+                language skills with realistic and dynamic conversation
+                scenarios powered by the OpenAI API. Engage in authentic
+                dialogues that replicate real-life interactions to enhance your
+                language proficiency.
+              </p>
+              <h4>Save and Review for Personalized Learning</h4>
+              <p class="text-body-secondary">Capture and store your
+                conversations for future reference and review. Access your saved
+                dialogues to analyze your progress, identify areas for
+                improvement, and tailor your language learning journey to suit
+                your needs.</p>
+              <h4>A Tailored Language Learning Experience</h4>  
+              <p class="text-body-secondary">
+                Customize your practice
+                sessions to focus on specific topics, vocabulary, or language
+                proficiency levels. Whether you're a beginner or an advanced
+                learner, our app adapts to your skill level and provides
+                targeted exercises to help you excel.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       {% endif %}
     </div>
   </div>
