--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block title %}New Chat{% endblock %} {% block
-content %}
+{% extends 'base.html' %} {% block title %}{{ chat_title }}{% endblock %} {%
+block content %}
 
 <main class="flex-shrink-0">
   <div class="container">
