--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@ content %}
       <!-- if there is no logged in user display landing page copy -->
       <div class="container d-flex justify-content-center">
           <div class="col-lg-7">
-            <h1 class="">ChatMentor</h1>
+            <h1 class="display-1">ChatMentor</h1>
             <p class="lead mb-3">Master Conversations, Elevate Your Language Skills</p>
             <div class="row">
               <div class="col-md-4">
